--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 install:
   - pip install git+https://github.com/chfw/ezodf.git
   - pip install git+https://github.com/chfw/pyexcel.git
-  - pip install git+https://github.com/chfw/pyexcel.ioext.git
+  - pip install git+https://github.com/chfw/pyexcel_io.git
   - pip install -r requirements.txt --use-mirrors
   - pip install -r tests/requirements.txt --use-mirrors
 script:
