--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
   - 3.4
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install weakrefset; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
   - pip install git+https://github.com/T0ha/ezodf.git
   - pip install git+https://github.com/chfw/pyexcel-io.git
   - pip install git+https://github.com/chfw/pyexcel.git
