--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ python:
   - 2.7
   - 3.3
   - 3.4
+  - 3.5
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install weakrefset; fi
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
   - pip install git+https://github.com/T0ha/ezodf.git
   - pip install git+https://github.com/chfw/pyexcel-io.git
-  - pip install git+https://github.com/chfw/pyexcel-xls.git
-  - pip install -r requirements.txt --use-mirrors
-  - pip install -r tests/requirements.txt --use-mirrors
+  - pip install -r requirements.txt
+  - pip install -r tests/requirements.txt
 script:
   make test
 after_success:
