fix broken build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ python:
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install weakrefset; fi
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
-  - pip install git+https://github.com/T0ha/ezodf.git
-  - pip install git+https://github.com/chfw/pyexcel-io.git
+  - pip install https://github.com/chfw/ezodf/archive/master.zip
+  - pip install https://github.com/chfw/pyexcel-io/archive/master.zip
   - pip install -r requirements.txt
   - pip install -r tests/requirements.txt
 script:
