--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,15 @@ sudo: false
 language: python
 notifications:
   email: false
-env:
-  global:
 python:
   - 2.7
   - 2.6
   - 3.3
   - 3.4
   - 3.5
-install:
+before_install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install weakrefset; fi
-  - pip install -r requirements.txt
   - pip install -r tests/requirements.txt
 script:
   make test
