--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ python:
 before_install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install weakrefset; fi
+  - pip install https://github.com/pyexcel/pyexcel-io/archive/master.zip
+  - pip install https://github.com/pyexcel/pyexcel-xls/archive/master.zip
+  - pip install https://github.com/pyexcel/pyexcel/archive/master.zip
   - pip install -r tests/requirements.txt
 script:
   make test
