--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: python
 notifications:
   email: false
 python:
-  - 2.7
+  - pypy
   - 2.6
+  - 2.7
+  - pypy3
   - 3.3
   - 3.4
   - 3.5
