--- a/.moban.d/travis.yml
+++ b/.moban.d/travis.yml
@@ -1,5 +1,8 @@
 {% extends "travis.yml.jj2" %}
-{%block test_other_python_versions%}  - 2.6
+{%block custom_python_versions%}
+python:
+  - 2.6
+  - 2.7
   - 3.3
   - 3.4
   - 3.5
