--- a/.moban.yml
+++ b/.moban.yml
@@ -15,4 +15,8 @@ targets:
   - "tests/requirements.txt": "tests/requirements.txt"
   - test.sh: test.sh.jj2
   - test.bat: test.sh.jj2
-
+  - "tests/test_filter.py": "tests/test_filter.py.jj2"
+  - "tests/test_formatters.py": "tests/test_formatters.py"
+  - "tests/test_stringio.py": "tests/test_stringio.py.jj2"
+  - "tests/test_writer.py": "tests/test_writer.py.jj2"
+  - "tests/base.py": "tests/base.py.jj2"
