--- a/.moban.yml
+++ b/.moban.yml
@@ -2,6 +2,7 @@ configuration:
   configuration_dir: "commons/config"
   template_dir:
   - "commons/templates"
+  - "setupmobans/templates"
   - ".moban.d"
   configuration: pyexcel_ods3.yaml
 targets:
@@ -10,11 +11,10 @@ targets:
   - "docs/source/conf.py": "docs/source/conf.py.jj2"
   - .travis.yml: travis.yml
   - requirements.txt: requirements.txt
-  - LICENSE: LICENSE.jj2
   - MANIFEST.in: MANIFEST.in.jj2
   - "tests/requirements.txt": "tests/requirements.txt"
-  - test.sh: test.sh.jj2
-  - test.bat: test.sh.jj2
+  - test.sh: test.script.jj2
+  - test.bat: test.script.jj2
   - "tests/test_filter.py": "tests/test_filter.py.jj2"
   - "tests/test_formatters.py": "tests/test_formatters.py"
   - "tests/test_stringio.py": "tests/test_stringio.py.jj2"
