--- a/pyexcel_ods3.yaml
+++ b/pyexcel_ods3.yaml
@@ -1,13 +1,14 @@
 overrides: "pyexcel.yaml"
 name: "pyexcel-ods3"
 nick_name: ods3
-version: 0.4.0
+version: 0.4.1
+current_version: 0.4.1
 release: 0.4.0
 file_type: ods
 dependencies:
   - pyexcel-io>=0.4.0
   - lxml
-  - ezodf>=0.3.2
+  - pyexcel-ezodf>=0.3.3
   - weakrefset;python_version<"2.7"
 description: |
   A wrapper library to read, manipulate and write data in ods format
