--- a/.moban.d/travis.yml
+++ b/.moban.d/travis.yml
@@ -1,12 +1,11 @@
 {% extends "travis.yml.jj2" %}
 {%block custom_python_versions%}
 python:
+  - 3.7-dev
   - 3.6
   - 3.5
   - 3.4
-  - 3.3
   - 2.7
-  - 2.6
 {%endblock%}
 
 {% block custom_install %}  - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
