--- a/.moban.yml
+++ b/.moban.yml
@@ -1,25 +1,13 @@
-requires:
-  - type: git
-    url: https://github.com/moremoban/pypi-mobans
-    submodule: true
-  - https://github.com/pyexcel/pyexcel-mobans
+overrides: "git://github.com/pyexcel/pyexcel-mobans!/mobanfile.yaml"
 configuration:
-  configuration_dir: "pyexcel-mobans:config"
-  template_dir:
-  - "pyexcel-mobans:templates"
-  - "pypi-mobans:templates"
-  - ".moban.d"
   configuration: pyexcel-ods3.yml
 targets:
-  - README.rst: README.rst
-  - setup.py: setup.py
+  - README.rst: custom_README.rst.jj2
+  - setup.py: custom_setup.py.jj2
   - "docs/source/conf.py": "docs/source/conf.py.jj2"
-  - .travis.yml: travis.yml
-  - requirements.txt: requirements.txt
+  - .travis.yml: custom_travis.yml.jj2
   - MANIFEST.in: MANIFEST.in.jj2
   - "tests/requirements.txt": "tests/requirements.txt"
-  - test.sh: test.script.jj2
-  - test.bat: test.script.jj2
   - "tests/test_filter.py": "tests/test_filter.py.jj2"
   - "tests/test_formatters.py": "tests/test_formatters.py"
   - "tests/test_stringio.py": "tests/test_stringio.py.jj2"
