--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+dist: xenial
 language: python
 notifications:
   email: false
@@ -8,14 +9,58 @@ python:
   - 3.5
   - 3.4
   - 2.7
+
+stages:
+  - lint
+  - moban
+  - test
+
+.disable_global: &disable_global
+  addons: false
+  cache: false
+  env: {}
+  python: false
+  before_install: false
+  install: false
+  before_script: false
+  script: false
+  after_success: false
+  after_failure: false
+  before_deploy: false
+  deploy: false
+
+.lint: &lint
+  <<: *disable_global
+  git:
+    submodules: false
+  python: 3.6
+  stage: lint
+  script: make lint
+
+.moban: &moban
+  <<: *disable_global
+  python: 3.6
+  stage: moban
+  install: pip install moban>=0.0.4
+  script:
+    - moban
+    - git diff --exit-code
+
+jobs:
+  include:
+    - *moban
+    - *lint
+
+stage: test
+
 before_install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install weakrefset; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install flake8==2.6.2; fi
   - if [[ -f min_requirements.txt && "$MINREQ" -eq 1 ]]; then
       mv min_requirements.txt requirements.txt ;
     fi
-  - test ! -f rnd_requirements.txt || pip install --no-deps -r rnd_requirements.txt
+  - test ! -f rnd_requirements.txt ||
+    pip install --no-deps -r rnd_requirements.txt
   - test ! -f rnd_requirements.txt || pip install -r rnd_requirements.txt ;
   - pip install -r tests/requirements.txt
 script:
