--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -3,9 +3,8 @@ mock;python_version<"3"
 codecov
 coverage
 flake8
+black
+isort
+collective.checkdocs
+pygments
 moban
-black;python_version>="3.6"
-isort;python_version>="3.6"
-psutil
-pyexcel
-pyexcel-xls
