--- a/pyexcel-ods3.yml
+++ b/pyexcel-ods3.yml
@@ -1,8 +1,8 @@
 overrides: "pyexcel.yaml"
 name: "pyexcel-ods3"
 nick_name: ods3
-version: 0.5.3
-current_version: 0.5.3
+version: 0.6.0
+current_version: 0.6.0
 release: 0.5.3
 file_type: ods
 is_on_conda: true
@@ -10,6 +10,9 @@ dependencies:
   - pyexcel-io>=0.5.10
   - lxml
   - pyexcel-ezodf>=0.3.3
-  - weakrefset;python_version<"2.7"
+test_dependencies:
+  - pyexcel
+  - psutil
+  - pyexcel-xls
 description: |
   A wrapper library to read, manipulate and write data in ods format
