:green_heart: update conf.py

--- a/pyexcel-ods3.yml
+++ b/pyexcel-ods3.yml
@@ -15,5 +15,5 @@ test_dependencies:
   - psutil
   - pyexcel-xls
 moban_command: false
-description: |
+description: |-
   A wrapper library to read, manipulate and write data in ods format
