--- a/pyexcel-ods3.yml
+++ b/pyexcel-ods3.yml
@@ -14,5 +14,6 @@ test_dependencies:
   - pyexcel
   - psutil
   - pyexcel-xls
-description: |
+moban_command: false
+description: |-
   A wrapper library to read, manipulate and write data in ods format
